@@ -10,6 +10,7 @@ PostUpgradePurge=xorg-common, libgl1-mesa, ltsp-client, ltspfsd, python2.3
 Demotions=demoted.cfg.dapper
 RemoveEssentialOk=sysvinit
 RemovalBlacklistFile=removal_blacklist.cfg
+PostInstallScripts=/usr/lib/udev/migrate-fstab-to-uuid.sh
 
 # information about the individual meta-pkgs
 [ubuntu-desktop]
