@@ -5,6 +5,7 @@ update-manager (1:0.87.15) hardy; urgency=low
   * DistUpgrade/DistUpgradeController.py:
     - abort when debsig-verify is installed, it makes any
       upgrade fail (LP: #208957)
+    - run migrate-fstab-to-uuid.sh as PostInstallScript (LP: #209347)
   * DistUpgrade/DistUpgradeViewKDE.py:
     - fix crash/race in terminal key press handler (LP: #205445)
     - fix encoding issue (LP: #208390)
